--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -33,7 +33,8 @@
 }
 .LogoStack {
   flex: 0.9;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .SearchStack {
@@ -46,10 +47,23 @@
   display: none;
 }
 
+@media (max-width: 374px) {
+  .Container {
+    padding-top: 8px;
+    padding-left: 0;
+    padding-right: 0;
+    font-size: 0.9rem;
+  }
+}
+
 @media (min-width: 768px) {
   .Container {
     padding-left: 25px;
     padding-right: 25px;
+  }
+
+  .HeaderRow {
+    max-height: 35px;
   }
 
   .LogoStack {
@@ -63,8 +77,7 @@
   }
 
   .Container {
-    padding-left: 0;
-    padding-right: 0;
+    padding: 10px 40px;
   }
 
   .LogoStack {
@@ -83,5 +96,11 @@
     display: flex;
     margin-left: 14px;
     align-self: center;
+  }
+}
+
+@media (min-width: 1150px) {
+  .Container {
+    padding: 13px;
   }
 }
