--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,7 +1,7 @@
 .Container {
   display: flex;
   width: 100%;
-  flex-direction: row;
+  height: 100%;
   justify-content: space-between;
   font-family: Arial, sans-serif;
 }
@@ -53,5 +53,9 @@
   .Categories,
   .Misc {
     display: none;
+  }
+
+  .Account {
+    padding: 8px;
   }
 }
